@@ -255,3 +255,4 @@ Revision	Version Updated		Log Message
 234		C++			Match output order more closely to V2 saves to make comparisons easier.
 235		C++			Culture mapping changes: give Sami, Ukrainian, Ugrian, Pashtun, Baluchi, and Malagasy correct mappings; move Papuan from Polynesian to Melanesian.
 236		C++			Add starting factories.
+237		C++			Apply diminishing-returns scaling to manufactory bonus for starting factories.
